add ReportProperties class and configure mdule openings for report settings

--- a/TourPlanner/src/main/resources/application.properties
+++ b/TourPlanner/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 openroute.api.key=5b3ce3597851110001cf6248b8e1f20dec4249ed8b7c216a8d9057d5
 
+report.default-dir=C:/tmp
+report.default-file=tour.pdf
