--- a/TourPlanner/pom.xml
+++ b/TourPlanner/pom.xml
@@ -102,6 +102,17 @@
       <version>0.8.8</version>
       <classifier>runtime</classifier>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.24.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.24.3</version>
+    </dependency>
   </dependencies>
 
   <build>
