--- a/TourPlanner/pom.xml
+++ b/TourPlanner/pom.xml
@@ -14,6 +14,8 @@
   <properties>
     <java.version>19</java.version>
     <javafx.version>19.0.2.1</javafx.version>
+    <itext.version>9.0.0</itext.version>
+    <slf4j.version>2.0.16</slf4j.version>
   </properties>
   <name>Tourplanner</name>
   <description>Tourplanner</description>
@@ -112,6 +114,27 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>2.24.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>kernel</artifactId>
+      <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>io</artifactId>
+      <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>layout</artifactId>
+      <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
 
