update pdf report font and size

--- a/TourPlanner/src/main/resources/application.properties
+++ b/TourPlanner/src/main/resources/application.properties
@@ -1,12 +1,17 @@
+### Spring Boot Basics ###
 spring.application.name=TourPlannerSpring
 
+### Database Config ###
 spring.datasource.url=jdbc:postgresql://localhost:5432/tourplanner_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+### JPA / Hibernate ###
 spring.jpa.hibernate.ddl-auto=update
 
+### API Key ###
 openroute.api.key=5b3ce3597851110001cf6248b8e1f20dec4249ed8b7c216a8d9057d5
 
+### App Specific Paths ###
 report.default-dir=C:/tmp
 report.default-file=tour.pdf
